# fh6-virtual_tcu_evolution

./: .gitignore  .npmrc  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PUBLISH-v13.4.0.md  README.md  README.zh-CN.md  RELEASE_NOTES_v13.4.0.md  crossover-upshift-all.patch  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.base.json  v13.3.0-crossover-relearn.patch  virtual_tcu.py  virtual_tcu.spec
.github/workflows/: ci.yml  release.yml
apps/dashboard/: README.md  package.json  tsconfig.json  vite.config.ts
apps/electron/: electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.json
docs/: monorepo-refactor-plan.md  output-mode-plan.md  shift-algorithm-optimization-plan.md
electron/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
packaging/: Launch VirtualTCU.bat  dev-electron.bat
pyvjoy/: __init__.py  _sdk.py  constants.py  vjoydevice.py
scripts/: plot_snapshot.py  sync-version.mjs
tests/: conftest.py  test_car_profile_key.py  test_clutch_assist.py  test_drive_style.py  test_gear_ratio_engine_brake.py  test_hunting.py  test_impact_recovery.py  test_learn_status.py  test_power_curve_cold_start.py  test_restart_argv.py  test_standstill_spam.py  test_udp_hub_target_utils.py  test_upshift_pending.py
virtual_tcu/: __init__.py  __main__.py  app.py  bootstrap.py  deps.py  paths.py  replay.py
virtual_tcu/config/: __init__.py  constants.py  store.py  web_bind.py
virtual_tcu/core/: __init__.py  mode.py
virtual_tcu/detectors/: __init__.py  airtime.py  reverse_hold.py  yaw_transient.py
virtual_tcu/input/: __init__.py  gamepad_output.py  (+4 more)
web-ui/: .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+136 files in other folders)
