[project]
name = "virtual-tcu"
version = "13.1.0"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "aiohttp>=3.9.0",
    "pypresence>=4.3.0",
    "vgamepad>=0.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["virtual_tcu"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"virtual_tcu/app.py" = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
